# constraint

./: .clippy.toml  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: auto-release.yml  ci.yml  release.yml  test-tag.yml
docs/: quickstart.md  trigger-log.md
scripts/: install-git-hooks.sh
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: add.rs  delete.rs  list.rs  mod.rs  patch.rs  search.rs  validate.rs
src/core/: constraint.rs  error.rs  mod.rs
src/core/loader/: mod.rs  registry.rs  v1.rs
src/storage/: jsonl.rs  mod.rs
src/utils/: id.rs  mod.rs  workspace.rs
tests/integration/: snapshot_helpers.rs  test_add.rs  test_delete.rs  test_list.rs  test_patch.rs  test_search.rs  test_validate.rs  test_versioning.rs
tests/unit/: test_constraint.rs  test_error.rs  test_id.rs  test_loader.rs
