[package]
name = "constraint"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing project constraints with RFC 2119 compliance"
authors = ["Newton Team"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "constraints", "rfc2119", "project-management"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/gonewton/constraints"
homepage = "https://github.com/gonewton/constraints"
documentation = "https://docs.rs/constraint"
readme = "README.md"

[[bin]]
name = "constraint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
fs2 = "0.4"
strsim = "0.11"
comfy-table = "7.0"
regex = "1.10"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.39"
cargo-tarpaulin = "0.27"# Release trigger: Mon Jan 19 09:11:42 PM UTC 2026
